[tool.poetry]
name = "agentzero"
version = "0.1.0"
description = "AgentZero lets you create, connect, bind, and modify zeromq sockets in runtime with ease."
authors = ["Gabriel Falcão <gabriel@nacaolivre.org>"]

[tool.poetry.dependencies]
python = "^3.6"
pyzmq = "^18.0"
gevent = "^1.4"
msgpack = "^0.6.1"

[tool.poetry.dev-dependencies]
nose = "^1.3"
rednose = "^1.3"
sure = "^1.4"
coverage = "^4.5"
flake8 = "^3.7"
ipdb = "^0.12.0"
mccabe = "^0.6.1"
twine = "^1.13"
freezegun = "^0.3.11"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
